<resources>
    <string name="author">Hoang Manh Long</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message" translatable="false">FCM Message</string>
    <string name="app_name" translatable="false">JChat</string>
    <string name="bubble_host" translatable="false">hoang.manh.long.com</string>

    <string name="facebook_app_id" translatable="false">1508563699738609</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">b4f1383ca68087c15b51e31b740921a4</string>

    <string name="feedback_mail" translatable="false">ziplong7le@gmail.com</string>

    <string name="channel_new_messages" translatable="false">New messages</string>
    <string name="channel_new_messages_description" translatable="false">All new incoming messages.</string>
    <!--    Login Screen-->
    <string name="or">Or</string>
    <string name="vietnam" translatable="false">Việt Nam</string>
    <string name="email" translatable="false">Email</string>
    <string name="login_with_google_account">Login with Google</string>
    <string name="login_intro">Connect easily with your family and friends over countries</string>

    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="login_email_false_message">Account information or password is incorrect</string>
    <string name="sign_up_message">Don\'t have an account? Sign up now</string>

    <string name="forget_password">Forget password ?</string>
    <string name="login_with_email">Login with Email</string>

    <string name="setting">Setting</string>
    <string name="logout">Log out</string>
    <string name="feedback">Feedback</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_waring"><b>Warning:</b> All of your data will be permanently deleted and cannot be recovered.\n\nAre you sure you want to delete?</string>
    <string name="my_account">My account</string>
    <string name="conversation">Conversation</string>
    <string name="my_profile">My profile</string>
    <string name="about">About</string>
    <string name="language">Language</string>
    <string name="agree">Agree</string>

    <string name="search">Search</string>
    <string name="conversation_empty">There was no conversation</string>

    <string name="notification">Notification</string>

    <string name="no_result">No results found</string>
    <string name="hi_user">Hi %s</string>

    <!--    Register-->
    <string name="username">Username</string>
    <string name="phone_number">Phone number</string>
    <string name="display_name">Display name</string>
    <string name="register_with_email">Register with Email</string>
    <string name="sign_up">Sign up</string>
    <string name="password_text_helper">Password must be greater than 6 characters</string>
    <string name="email_exist">Email already exists. Please use another email</string>
    <string name="other_error">An error occurred. Please try again</string>

    <string name="network_not_available_title">No Internet Connection</string>
    <string name="network_not_available_message">Please check your internet connection and try again</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="try_again">Try again</string>

    <string name="select_language">Select language</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="save">Save</string>

    <string name="signup_description">Sign up your Family Messaging with your email account</string>
    <string name="avatar">Avatar</string>
    <string name="scan_qr_code">Scan QR code</string>

    <string name="recent_search_history">Recent search history</string>
    <string name="messages_empty">There are no messages</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="sending">Sending</string>
    <string name="suggested_answers">Suggested answer</string>
    <string name="remove_search_history_title">Delete search history</string>
    <string name="clear_all_search_history_title">Delete all search history</string>
    <string name="clear_all_search_history_message">Do you want to delete all search history?</string>
    <string name="remove_search_history_message">Are you sure you want to delete %s?</string>
    <string name="clear_all">Clear all</string>
    <string name="push_text_to_search_box">Push text to search box</string>
    <string name="this_function_will_be_updated_soon">This function will be updated soon ❤️</string>
    <string name="copied_to_clipboard">Copied</string>

    <!--    Message Options-->
    <string name="copy">Copy</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="reply">Reply</string>
    <string name="pinned">Pinned</string>
    <string name="message_removed">Message removed</string>

    <string name="no_google_account_warning">No Google accounts could be found. Please create an account and try again</string>
    <string name="error_occurred">Unexpected error occurred. Please try again later</string>
    <string name="verified">Verified</string>
    <string name="connected">Connected</string>
    <string name="photo_last_message">[Image]</string>
    <string name="max_pin_message_warning">A maximum of 3 messages can only be pinned</string>
    <string name="message_has_been_pinned">The message has been pinned</string>
    <string name="pinned_successfully">Pinned successfully</string>
    <string name="pinned_by">Pinned by %s at %s</string>
    <string name="hide_less">Hide less</string>
    <string name="press_to_exit">Press back again to exit</string>
    <string name="photo_saved">Photo saved</string>
    <string name="save_photo_fail">Save image failed</string>
    <string name="my_qr">My QR code</string>
    <string name="qr_description">People can scan QR code to send a message directly to your chats list</string>
    <string name="qr_invalid_message">Invalid QR Code, Please check again</string>
    <string name="scan_qr_error">Scan QR code failed</string>
    <string name="sender_you">You</string>
    <string name="create_group">Create group chat</string>
    <string name="communication">Communication</string>
    <string name="create">Create</string>
    <string name="group_chat_name_hint">Group chat name (Optional)</string>
    <string name="select_member">Select member</string>
    <string name="select_member_guide">Group chat minimum 3 and maximum 100 members</string>
    <string name="contacts">Contacts</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="contacts_empty">No contact yet</string>
    <string name="format_chatroom_members">%s members</string>
    <string name="chatroom">Chat room</string>
    <string name="user">User</string>
    <string name="add_chatroom_description">Add group description</string>
    <string name="leave_group">Leave group</string>
    <string name="leave_this_conversation">Leave this conversation?</string>
    <string name="add_members">Add members</string>
    <string name="members">Members</string>
    <string name="leave_chatroom_warning">You won\'t be able to find and rejoin this conversation again unless another user adds or invites you.</string>
    <string name="block">Block</string>
    <string name="search_in_conversation">Search in conversation</string>
    <string name="pinned_messages">Pinned messages</string>
    <string name="audio_call">Audio call</string>
    <string name="video_call">Video call</string>
    <string name="app_user">App user</string>
    <string name="format_time_message_of_receiver_message" translatable="false">• %s</string>
    <string name="_new">New</string>
    <string name="sent_an_image">Sent an image</string>
    <string name="file_size_exceed_limit">Selected image is larger than %sMB. Please choose a smaller image</string>
    <string name="message_has_been_deleted">Message has been deleted</string>
    <string name="authorization">Authorization</string>
    <string name="camera_access_denied">No access to camera</string>
    <string name="camera_access_denied_title">Camera permission required</string>
    <string name="camera_access_denied_message">Camera permission is needed to use this feature. Please grant the permission in the app settings.</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="user_created_group_chat">%s created group chat</string>

    <string name="photo">Photo</string>
    <string name="camera">Camera</string>
    <string name="file">File</string>
    <string name="file_size_type" translatable="false">%s • %s</string>
    <string name="sent_file">sent file</string>
    <string name="open_file_with">Open file with</string>
    <string name="download">Download</string>
    <string name="download_success">Download successfully</string>
    <string name="downloading">Downloading</string>
    <string name="download_fail">Download failed</string>
    <string name="write_storage_denied_title">Write storage permission required</string>
    <string name="write_storage_denied_message">To download files to your phone, you need to have write storage permission. Please grant the permission in the app settings</string>
    <string name="dot_3" translatable="false">%s • %s • %s</string>
    <string name="file_name_unknown">File name unknown</string>
    <string name="replied_to">%s replied to %s</string>
    <string name="reply_to">Reply to %s</string>
    <string name="grant_access">Grant access</string>
    <string name="qr_code_not_found">QR code does not exist. Please try again.</string>
    <string name="share_image_with">Share image with</string>
    <string name="user_deleted_a_message">%s deleted a message</string>
    <string name="unchangeable">Unchangeable</string>
    <string name="username_required">Username (required)</string>
    <string name="phone_number_optional">Phone number (optional)</string>
    <string name="sent_a_file">Sent a file</string>
    <string name="sent_many_file">Sent %s files</string>
    <string name="yesterday">Yesterday</string>
    <string name="leave">Leave</string>
    <string name="edit_conversation_information">Edit conversation information</string>
    <string name="chatroom_name">Chatroom name</string>
    <string name="description">Description</string>
    <string name="chatroom_name_helper">Chat room name cannot be blank</string>
    <string name="user_update_chatroom_info">%s updated conversation information</string>
    <string name="anonymous">Anonymous</string>
    <string name="unknown_user">Unknown user</string>
    <string name="chatroom_members">Members (%d)</string>
    <string name="no_members">No members</string>
    <string name="add">Add</string>
    <string name="add_member_description">Your contacts in this chat room will not be displayed</string>
    <string name="a_member_left_group">A member has left the group</string>
    <string name="member_left_group">%s has left the group</string>
    <string name="user_joined_group">%d member just joined</string>
</resources>