<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isTheEnglishLanguageDisplayed"
            type="Boolean" />

        <variable
            name="fragment"
            type="com.android.kotlin.familymessagingapp.screen.select_language.SelectLanguageBottomSheetDialogFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/vietnameseMaterialRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> fragment.isTheEnglishLanguageSelected(false)}"
                android:text="@string/vietnamese" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/englishMaterialRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> fragment.isTheEnglishLanguageSelected(true)}"
                android:text="@string/english" />
        </RadioGroup>

        <Button
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> fragment.onSaveButtonClick()}"
            android:text="@string/save" />

    </LinearLayout>
</layout>
